--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,14 @@ body {
     margin: 0;
 }
 
+
+.header-main {
+    padding: 6px;
+    background: #009E1A;
+    width: 100%;
+    height: 100%;
+}
+
 .heading {
     display: inline-block;
     padding-left: 10px;
@@ -78,12 +86,6 @@ li > a {
     font-family: 'Anton', sans-serif;
 }
 
-.header-main {
-    padding: 10px;
-    background: green;
-    width: 100%;
-    height: 100%;
-}
 
 .main-footer {
     background-color: black;
