--- a/main.css
+++ b/main.css
@@ -10,6 +10,10 @@
     text-align: center;
 }
 
+.plan-cover {
+	text-align: center;
+}
+
 .plans {
     display: inline-block;
     background-color: #e6e6fa;
