--- a/main.css
+++ b/main.css
@@ -1,9 +1,19 @@
 
 #product-overview {
-    background: #ff1b68;
+    background: url("./images/freedom.jpg");
     width: 100%;
     height: 528px;
-    
+    margin-top: 58px;
+    position: relative;
+}
+
+#product-overview>h1 {
+    z-index: 1;
+    color: white;
+    position: absolute;
+    margin: 0;
+    bottom: 10%;
+    left: 10%;    
 }
 
 .section-title {
