--- a/packages/packages.css
+++ b/packages/packages.css
@@ -2,9 +2,19 @@ main {
 	text-align: left;
 }
 
+.background-img {
+	background: url("../images/plans-background.jpg");
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	overflow-y: scroll;
+}
+
 .main-section {
 	width: 80%;
-	margin: 40px 0;
+	margin: 80px 0 0 0;
+	position: relative;
+	z-index: 1;
 	border-top-color: black;
 	border-top-style: solid;
 	border-right-color: black;
@@ -14,7 +24,7 @@ main {
 	border-top-width: : 3px;
 	border-right-width: : 3px;
 	border-bottom-width: : 3px;
-	background-color: rgba(25,150,25,0.3);
+	background-color: rgba(213,255,220,0.95);
 }
 
 .main-section__premium {
@@ -46,7 +56,7 @@ main {
 	border-top-width: : 3px;
 	border-left-width: : 3px;
 	border-bottom-width: : 3px;
-	background-color: rgba(25,150,25,0.3);
+	background-color: rgba(213,255,220,0.95);;
 }
 
 .main-section__second:hover {
@@ -63,6 +73,18 @@ main {
 
 .plan-name_premium{
 	color: white;
+}
+
+.plus-badge {
+	position: absolute;
+	right: 2%;
+	font-size: 15px;
+	top: 8%;
+	color: white;
+	background-color: red;
+	margin: 0;
+	padding: 3px;
+	z-index: 10;
 }
 
 .plan-highlight {
